<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tahun">Tahun</string>
    <string name="sumber">Sumber</string>
    <string name="jenis">Jenis</string>
    <string name="nominal">Nominal(juta)</string>
    <string name="jumlahpertahun">JumlahPerTahun</string>
    <string name="keterangan">Keterangan</string>
    <string name="tanggal">Tanggal</string>
    <string name="jumlah_penelitian">Jumlah Penelitian</string>
    <string name="total_dana">Total dana yang telah digunakan Rp </string>


<!--    <string-array name="data_tahun">-->
<!--        <item>2012</item>-->
<!--        <item>2013</item>-->
<!--        <item>2014</item>-->
<!--        <item>2012</item>-->
<!--        <item>2013</item>-->
<!--        <item>2014</item>-->
<!--        <item>2012</item>-->
<!--        <item>2013</item>-->
<!--        <item>2014</item>-->
<!--    </string-array>-->

<!--    <string-array name="data_sumber">-->
<!--        <item>PT.Sejahtera</item>-->
<!--        <item>PT.Kotok</item>-->
<!--        <item>PT.Abadi</item>-->
<!--        <item>PT.Jawa</item>-->
<!--        <item>PT.Mulia</item>-->
<!--        <item>PT.Karya</item>-->
<!--        <item>PT.Raja</item>-->
<!--        <item>PT.Rusak</item>-->
<!--        <item>PT.Makan</item>-->
<!--    </string-array>-->

<!--    <string-array name="data_keterangan">-->
<!--        <item>Pemasukan</item>-->
<!--        <item>Pemasukan</item>-->
<!--        <item>Pengeluaran</item>-->
<!--        <item>Pemasukan</item>-->
<!--        <item>Pengeluaran</item>-->
<!--        <item>Pemasukan</item>-->
<!--        <item>Pemasukan</item>-->
<!--        <item>Pengeluaran</item>-->
<!--        <item>Pemasukan</item>-->
<!--    </string-array>-->

<!--    <string-array name="data_tanggal">-->
<!--        <item>12-04</item>-->
<!--        <item>30-09</item>-->
<!--        <item>14-12</item>-->
<!--        <item>18-02</item>-->
<!--        <item>19-05</item>-->
<!--        <item>16-07</item>-->
<!--        <item>16-04</item>-->
<!--        <item>03-05</item>-->
<!--        <item>04-09</item>-->
<!--    </string-array>-->

<!--    <string-array name="data_nominal">-->
<!--        <item>10.000</item>-->
<!--        <item>20.000</item>-->
<!--        <item>40.000</item>-->
<!--        <item>10.000</item>-->
<!--        <item>20.000</item>-->
<!--        <item>40.000</item>-->
<!--        <item>10.000</item>-->
<!--        <item>20.000</item>-->
<!--        <item>100000000</item>-->
<!--    </string-array>-->

<!--    <string-array name="data_nominalpertahun">-->
<!--        <item>10.000</item>-->
<!--        <item>20.000</item>-->
<!--        <item>40.000</item>-->
<!--        <item>10.000</item>-->
<!--        <item>20.000</item>-->
<!--        <item>40.000</item>-->
<!--        <item>10.000</item>-->
<!--        <item>20.000</item>-->
<!--        <item>100000000</item>-->
<!--    </string-array>-->

    <string name="app_name">HomeLayoutProjectPab</string>
    <string name="home">Home</string>
    <string name="saldo_nrp_100_000_00">Saldo\nRp.100,000,00</string>
    <string name="pengeluaran2_nrp_100_000_00">Pengeluaran\nRp.100,000,00</string>
    <string name="pemasukan_nrp_100_000_00">Pemasukan\nRp.100,000,00</string>
    <string name="riwayat_pengeluaran">Riwayat Pengeluaran</string>
    <string name="riwayat_pemasukan">Riwayat Pemasukan</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tanggal_home">Tanggal</string>
    <string name="jenis_pengeluaran">Jenis Pengeluaran</string>
    <string name="nominal_home">Nominal</string>
    <string name="tanggal1">01/01/2024</string>
    <string name="pembelian_buku">Pembelian Buku</string>
    <string name="_150_000">150.000</string>
    <string name="jenis_pemasukan">Jenis Pemasukan</string>
    <string name="gaji">Gaji</string>
    <string name="_5_000_000">5.000.000</string>
    <string name="title_chart">Dashboard</string>
    <string name="title_laporan">Notifikasi</string>

</resources>