<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dashboardkeuangan.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.dashboardkeuangan.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_financial_report"
        android:name="com.example.dashboardkeuangan.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_financial_report" />
    <fragment
        android:id="@+id/navigation_kerjasama"
        android:name="com.example.dashboardkeuangan.ui.kerjasama.KerjasamaFragment"
        android:label="fragment_kerjasama"
        tools:layout="@layout/fragment_kerjasama" />
    <fragment
        android:id="@+id/navigation_penelitian"
        android:name="com.example.dashboardkeuangan.ui.penelitian.PenelitianFragment"
        android:label="fragment_penelitian"
        tools:layout="@layout/fragment_penelitian" />
</navigation>