<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pokeItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="12dp"
    app:cardCornerRadius="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:background="@drawable/boorder"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="6">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="4"
            android:rowCount="1">
            <TextView
                android:id="@+id/textView"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_columnWeight="1"
                android:text="@string/sumber"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_columnWeight="1"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="@string/keterangan"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="0"
                android:layout_columnWeight="1"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="@string/tanggal"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_row="0"
                android:layout_columnWeight="1"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="@string/nominal"
                android:textSize="14sp"
                android:textStyle="bold" />
        </GridLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>