<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.kerjasama.KerjasamaFragment">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2c3e50"
        android:gravity="center"
        android:padding="16dp"
        android:text="Dana KerjaSama"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTahun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_text">

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTahunLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tahun"
                    android:textColor="@color/teal_200"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTahun"
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:text="@string/tahun"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginStart="230dp"
                    android:background="#D3D3D3" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvTahunValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jumlahpertahun"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:layout_marginTop="8dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!-- CardView for displaying the list -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardList"
        android:layout_width="367dp"
        android:layout_height="600dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardTahun">

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvListLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LIST"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:paddingBottom="10dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:background="@drawable/boorder"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="6">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnCount="4"
                    android:rowCount="1">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:layout_gravity="center"
                        android:text="@string/sumber"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="center"
                        android:text="@string/keterangan"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="2"
                        android:layout_columnWeight="1"
                        android:layout_gravity="center"
                        android:text="@string/tanggal"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="3"
                        android:layout_columnWeight="1"
                        android:layout_gravity="center"
                        android:text="@string/nominal"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </GridLayout>

            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/KerjasamaItemList"
                android:layout_width="match_parent"
                android:layout_height="590dp"
                android:layout_marginTop="16dp"
                tools:listitem="@layout/item_kerjasama"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>